--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SHOPIFY_API_KEY = 315cf57f57e01b88a2b92811a41c0c3c
 SHOPIFY_API_SECRET = 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
 SHOPIFY_API_SCOPES = read_products,read_orders
-HOST =4e7e-103-15-252-242.ngrok.io
+HOST =
