--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@shopify/polaris": "^9.2.2",
     "@apollo/client": "^3.5.10",
     "@shopify/shopify-api": "^2.1.0",
     "@testing-library/jest-dom": "^5.16.2",
