--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-SHOPIFY_API_KEY = 315cf57f57e01b88a2b92811a41c0c3c
-SHOPIFY_API_SECRET = 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
-SHOPIFY_API_SCOPES = read_products,read_orders
-HOST =
+REACT_APP_SHOPIFY_API_KEY = 315cf57f57e01b88a2b92811a41c0c3c
+REACT_APP_SHOPIFY_API_SECRET = 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
+REACT_APP_SHOPIFY_API_SCOPES = read_products,read_orders
+REACT_APP_REDIRECT_URI = https://f980-180-94-32-3.ngrok.io/auth/callback
+
+
